# spec-driven-todo-system

./: .gitignore  CONTRIBUTING.md  Hackathon II - Todo Spec-Driven Development.md  LICENSE  README.md  package-lock.json
.claude/: settings.local.json
.github/workflows/: sync-phase3-mcp-server-to-huggingface-space.yml
.specify/memory/: constitution.md
phase-01/: pyproject.toml
phase-02/frontend/: .gitignore  next.config.js  package-lock.json
phase-03/backend/: README.md
phase-03/frontend/: package-lock.json
phase-03/mcp_server/: Dockerfile  README.md
phase-04/: README.md  TESTING.md
phase-04/frontend/: .env.example  Dockerfile  frontend.env
phase-04/k8s/: namespace.yaml
phase-04/mcp_server/: .dockerignore
phase-04/scripts/: deploy-app.sh  setup-minikube.sh  test-deployment.sh
phase-05/: KUBERNETES-DEPLOYMENT-SUCCESS.md  README-DAPR.md  README.md  TESTING.md  compose.microservices.yml  compose.yaml
phase-05/audit-service/: Dockerfile  README.md  pyproject.toml
phase-05/audit-service/src/: __init__.py  database.py  kafka_consumer.py  main.py  models.py
phase-05/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
phase-05/backend/alembic/versions/: 001_create_audit_and_dead_letter_queue_tables.py
phase-05/backend/src/: main.py
phase-05/backend/src/api/routes/: kafka_router.py
phase-05/backend/src/config/: settings.py
phase-05/backend/src/database/: database.py
phase-05/backend/src/kafka/: __init__.py  config.py  event_schemas.py  producer.py  topics.py
phase-05/backend/src/monitoring/: metrics.py
phase-05/backend/src/services/: task_service.py
phase-05/backend/tests/integration/: test_chatbot_functionality.py
phase-05/dapr-components/: config.yaml  statestore.yaml
phase-05/frontend/: .dockerignore  .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  SECURITY.md  package.json
phase-05/kafka_common/: __init__.py  config.py  event_schemas.py
phase-05/mcp_server/: Dockerfile  (+1 more)
phase-05/notification-service/: Dockerfile  README.md  pyproject.toml
phase-05/notification-service/src/: __init__.py  database.py  kafka_consumer.py  main.py  models.py  notification_channels.py  notification_service.py
phase-05/reminder-service/: Dockerfile  README.md  pyproject.toml
phase-05/reminder-service/src/: __init__.py  database.py  kafka_consumer.py  main.py  models.py  reminder_scheduler.py
(+178 files in other folders)
